--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/async-storage": "^1.8.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/slider": "^2.0.8",
+    "@react-native-firebase/app": "^10.8.1",
+    "@react-native-firebase/messaging": "^10.8.1",
     "@react-navigation/drawer": "^5.0.7",
     "@react-navigation/native": "^5.0.6",
     "@react-navigation/stack": "^5.0.6",
@@ -21,12 +23,11 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-device-info": "^5.5.3",
-    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-picker": "^2.3.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-mail": "^4.1.0",
-    "react-native-push-notification": "^3.1.9",
+    "react-native-push-notification": "^7.2.1",
     "react-native-razorpay": "^2.1.32",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
